[gd_scene load_steps=18 format=3 uid="uid://cb0v5gklkhxps"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_0qefu"]
[ext_resource type="Theme" uid="uid://cev8oq6t2f58c" path="res://Themes/Button Theme.tres" id="1_1o6i2"]
[ext_resource type="FontFile" uid="uid://ba12ijup4tb8f" path="res://Assets/Font/ThaleahFat.ttf" id="1_yj2av"]
[ext_resource type="StyleBox" uid="uid://oh3jgi2bhomm" path="res://Themes/ButtonStyleBoxMainMenu.tres" id="3_6j10l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2101s"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_83xb7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skgy2"]

[sub_resource type="Theme" id="Theme_fy2q8"]
Label/colors/font_shadow_color = Color(0, 0, 0, 0.945098)
Label/constants/shadow_offset_x = 4
Label/constants/shadow_offset_y = 4
Label/font_sizes/font_size = 120
Label/fonts/font = ExtResource("1_yj2av")
Label/styles/normal = SubResource("StyleBoxFlat_skgy2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxmih"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7axq7"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nu25x"]
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l2bix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5kqre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ukq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eyu3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0akm"]

[sub_resource type="Theme" id="Theme_1avvh"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0.183589, 0.183591, 0.183591, 1)
Button/colors/font_hover_pressed_color = Color(0.52549, 0.52549, 0.52549, 1)
Button/colors/font_pressed_color = Color(0.525101, 0.525101, 0.525101, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("1_yj2av")
Button/styles/disabled = SubResource("StyleBoxEmpty_l2bix")
Button/styles/focus = SubResource("StyleBoxEmpty_5kqre")
Button/styles/hover = SubResource("StyleBoxEmpty_0ukq4")
Button/styles/normal = SubResource("StyleBoxEmpty_eyu3t")
Button/styles/pressed = SubResource("StyleBoxEmpty_n0akm")

[node name="MainMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0qefu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2101s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_83xb7")
theme_override_constants/separation = 115
alignment = 1

[node name="GameName" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_fy2q8")
theme_override_styles/normal = SubResource("StyleBoxFlat_lxmih")
text = "Resize"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer/VB"]
layout_mode = 2
theme = ExtResource("1_1o6i2")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.82606, 0.82606, 0.82606, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("3_6j10l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7axq7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu25x")
theme_override_styles/disabled = ExtResource("3_6j10l")
theme_override_styles/focus = ExtResource("3_6j10l")
text = "Play
"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/VB"]
layout_mode = 2
theme = ExtResource("1_1o6i2")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.82606, 0.82606, 0.82606, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("3_6j10l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7axq7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu25x")
theme_override_styles/disabled = ExtResource("3_6j10l")
theme_override_styles/focus = ExtResource("3_6j10l")
text = "Quit"

[node name="Mute" type="Button" parent="PanelContainer/VBoxContainer/VB"]
layout_mode = 2
theme = SubResource("Theme_1avvh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.82606, 0.82606, 0.82606, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("3_6j10l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7axq7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu25x")
theme_override_styles/disabled = ExtResource("3_6j10l")
theme_override_styles/focus = ExtResource("3_6j10l")
text = "Mute"

[connection signal="button_up" from="PanelContainer/VBoxContainer/VB/Play" to="." method="_on_play_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/VB/Play" to="." method="_on_play_mouse_entered"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/VB/Quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/VB/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/VB/Mute" to="." method="_on_mute_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/VB/Mute" to="." method="_on_mute_mouse_entered"]
